--- a/travis.yml
+++ b/travis.yml
@@ -3,8 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t mdrwiega/simple-react .
+  - docker build -t defudef/simple-react .
 
 script:
-  - docker run -e CI=true mdrwiega/simple-react npm run test -- --coverage
-  
+  - docker run -e CI=true defudef/simple-react npm run test -- --coverage
