--- a/travis.yml
+++ b/travis.yml
@@ -1,9 +1,9 @@
-language: node_js
+sudo: required
 services:
   - docker
 
 before_install:
-  - docker build -t defudef/simple-react .
+  - docker build -t defudef/simple-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true defudef/simple-react npm run test -- --coverage
+  - docker run -e CI=true defudef/simple-react npm run test --coverage
