--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t defudef/simple-react -f Dockerfile.dev .
+  - docker build -t defudef/simple-react -f Dockerfile .
 
 script:
   - docker run -e CI=true defudef/simple-react npm run test --coverage
